更新点： 1. 修改summary 表，添加cds 数据信息。 2. 更新bakta 使用，添加参数，使得contig name 不再改变。 3. 生产contig 反比后深度统计文件，该文件添加成环信息。 4. 根据深度进行contig 过滤，并且需要成环，才能保存。更新conig 统计文件，和基因组序列文件。 5. 根据统计文件生成bakta 需要的 repclion 文件。 6. 调整nf 流程，跟这次更新做匹配。输出文件也有小的变化。 基因组文件改为，更新后的文件。

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ trace {
 }
 
 tower {
-    enabled = true
+    enabled = false
     accessToken = "x"
     endpoint = "http://192.168.100.99:3000/api"
     workspaceId = "2"
@@ -56,7 +56,7 @@ plugins {
 
 
 manifest {
-    author = 'Yifan Hu'
+    author = 'Lei Zhao'
     description = "bacteria_assembly: ${params.project_id}"
     mainScript = 'main.nf'
     nextflowVersion = '>=24.04.4'
