新的截取方式，用于数据质量差

--- a/config/database.config
+++ b/config/database.config
@@ -17,5 +17,10 @@ params {
         kraken2_db     =  "/bioinformation/huyifan/database/Kraken2_Bracken/PlusPF"
         bakata_db      =  "/nas02/project/zhaolei/database/bakta/db/db"
         ossconfig_bj   =  "/nas02/project/zhaolei/database/ossutilconfig-bj"
+        nr             =  "/nas02/project/zhaolei/database/NR/nr_diamond_db/nr.dmnd"
+        GO             =  "/nas02/project/zhaolei/database/GO/terms.json"
+        cog_def        =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.def.tab"
+        cog_fun        =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.fun.tab"
+        
     }
 }
