添加了sample_label（sample name, sample ig）， 作为样本文件夹和输出文件的前缀; 修改了质控的软件fastplong 的参数，添加了barcode 查询和adaper 序列的生成，作为fastplong 的参数。

--- a/config/software.config
+++ b/config/software.config
@@ -7,7 +7,7 @@ params {
         ont_barcoder     = "/nas02/software/dorado/dorado_server_7.3.9/ont-dorado-server/bin/ont_barcoder"
         zcat             = "/usr/bin/zcat"
         filtlong         = "/nas02/project/zhaolei/software/conda/conda_env/bininfo/bin/filtlong"
-        fastplong        = "/nas02/software/fastplong/bin/fastplong"
+        fastplong        = "/nas02/software/fastplong_v0.2.2/fastplong"
         nanoplot         = "/data/software/miniconda/bin/NanoPlot"
         kraken2          = "/data/software/kraken2/kraken2"
         bracken          = "/data/software/Bracken/bracken"
@@ -32,7 +32,8 @@ params {
         featureCounts    = "/nas02/project/huyifan/software/rnaseq/v1.0/bin/featureCounts"
 		rscript          = "/nas02/software/R/R4.3.2/bin/Rscript"
         picard           = "/nas02/project/huyifan/software/rnaseq/v1.0/bin/picard"
-        //cnv_additional = "${projectDir}/Database/cnv/file/cnv_additional_fuzhou.txt"
+        diamond          = "/nas02/project/zhaolei/software/conda/conda_env/bininfo/bin/diamond"
+        
        
     }
 }
