--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ nextflow.enable.dsl=2
 includeConfig 'config/cluster.config'
 includeConfig 'config/software.config'
 includeConfig 'config/database.config'
+includeConfig 'config/barcode.config'
 
 params {
   fastq = null
@@ -13,6 +14,7 @@ params {
   out_dir = "analysis"
   chunk_size = 1000000
   dep_png_bin_size = 10000
+  anno_analysys = false
   manual = false               // 是否手动模式
   csv = null                   // CSV 文件路径（批量模式）
   project_id = null            // 单样本模式下的 project_id
@@ -22,6 +24,7 @@ params {
   species_name = null          // 单样本模式下的 species_name
   genome_size = null           // 单样本模式下的 genome_size
   sample_id = null
+  report_path = null
 }
 
 
