1、更新信息单拉取模块的脚本，一次拉取5个实验室的数据； 增加可移植性：config json 中信息使用相对路径；拉取信息单所需的脚本，都放在流程脚本中，不再使用其他固定路径脚本。 2、优化拉取信息单 python  脚本，使脚本使用更方便，不用参数，但保留参数功能；内置实验室循环； 精简脚本功能，只用来拉取数据； 3、修改nanoplot 环境， 环境中的nanoplot 源码修改了； 4、提交基因注释相关的脚本；后续接着更新； 5、修改了结果路径；和nf 流程分析信息的路径和名字；做到不覆盖每次信息

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
   threads = 3
   chunk_size = 1000000
   input="sample.xls"
-  out_dir = "analysis"
+  out_dir = "./"
   chunk_size = 1000000
   dep_png_bin_size = 10000
   anno_analysys = false
@@ -29,22 +29,37 @@ params {
 
 
 // includeConfig "config/${params.genome}.config"
-
+nextflow.enable.configProcessNamesValidation = false
+def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
-  enabled = true
-  file = "${params.out_dir}/execution/timeline.html"
-  overwrite = true
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
 }
 report {
-  enabled = true
-  file = "${params.out_dir}/execution/report.html"
-  overwrite = true
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_report_${trace_timestamp}.html"
 }
 trace {
-  enabled = true
-  file = "${params.out_dir}/execution/trace.txt"
-  overwrite = true
+    enabled = true
+    file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
 }
+
+
+// timeline {
+//   enabled = true
+//   file = "${params.out_dir}/execution/timeline.html"
+//   overwrite = true
+// }
+// report {
+//   enabled = true
+//   file = "${params.out_dir}/execution/report.html"
+//   overwrite = true
+// }
+// trace {
+//   enabled = true
+//   file = "${params.out_dir}/execution/trace.txt"
+//   overwrite = true
+// }
 
 tower {
     enabled = false
@@ -63,5 +78,5 @@ manifest {
     description = "bacteria_assembly: ${params.project_id}"
     mainScript = 'main.nf'
     nextflowVersion = '>=24.04.4'
-    version = '1.x.x'
+    version = '1.3'
 }
