--- a/config/database.config
+++ b/config/database.config
@@ -14,8 +14,25 @@ nextflow.enable.dsl=2
 
 params {
     database {
-        kraken2_db     =  "/bioinformation/huyifan/database/Kraken2_Bracken/PlusPF"
-        bakata_db      =  "/nas02/project/zhaolei/database/bakta/db/db"
-        ossconfig_bj   =  "/nas02/project/zhaolei/database/ossutilconfig-bj"
+        kraken2_db                       =  "/nas02/project/zhaolei/database/Kraken2/Kraken2_db_PlusPF"
+        bakata_db                        =  "/nas02/project/zhaolei/database/bakta/db/db"
+        ossconfig_bj                     =  "/nas02/project/zhaolei/database/ossutilconfig-bj"
+        nr                               =  "/nas02/project/zhaolei/database/NR/nr_diamond_db/nr.dmnd"
+        accession2taxid                  =  "/nas02/project/zhaolei/database/NR/prot.accession2taxid.FULL.txt"
+        go_term                          =  "/nas02/project/zhaolei/database/GO/terms.json"
+        cog_def                          =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.def.tab"
+        cog_fun                          =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.fun.tab"
+        swiss_prot                       =  "/nas02/project/zhaolei/database/UniProt/swiss-prot_db/swiss-prot_diamond.dmnd"
+        swiss_prot_id_description        =  "/nas02/project/zhaolei/database/UniProt/id_description.json"
+        card                             =  "/nas02/project/zhaolei/database/CARD/CARD_diamond/card.dmnd"
+        card_aro_json                    =  "/nas02/project/zhaolei/database/CARD/db_raw/ontology_db/aro.json"
+        phi                              =  "/nas02/project/zhaolei/database/PHI/phi_diamond/phi.dmnd"
+        phi_base_info                    =  "/nas02/project/zhaolei/database/PHI/phi-base_current.csv"
+        vfdb                             =  "/nas02/project/zhaolei/database/VFDB/vfdb_diamond/vfdb.dmnd"
+        vfdb_setb                        =  "/nas02/project/zhaolei/database/VFDB/setB.json"
+        vfdb_vfs                         =  "/nas02/project/zhaolei/database/VFDB/VFs.json"
+        cazy_dbcan                       =  "/nas02/project/zhaolei/database/CAZy/db3/db/"
+        cazy_level1_json                 =  "/nas02/project/zhaolei/database/CAZy/db3/cazy_level1.json"
+
     }
 }
