- 自动判断实验室，获取对应的config文件； - 释放数据添加rawdata 单独的释放路径；

--- a/config/software.config
+++ b/config/software.config
@@ -33,7 +33,8 @@ params {
 		rscript          = "/nas02/software/R/R4.3.2/bin/Rscript"
         picard           = "/nas02/project/huyifan/software/rnaseq/v1.0/bin/picard"
         diamond          = "/nas02/project/zhaolei/software/conda/conda_env/bininfo/bin/diamond"
-        
+        java             = "/nas02/software/jdk-22.0.1/bin/java"
+        ossutil64        = "/usr/bin/ossutil64"
        
     }
 }
