- 更新了功能基因数据库相关的脚本，原始数据库文件。

--- a/config/database.config
+++ b/config/database.config
@@ -21,18 +21,21 @@ params {
         accession2taxid                  =  "/nas02/project/zhaolei/database/NR/prot.accession2taxid.FULL.txt"
         go_term                          =  "/nas02/project/zhaolei/database/GO/terms.json"
         cog_def                          =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.def.tab"
-        cog_fun                          =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.fun.tab"
+        cog_fun                          =  "/nas02/project/zhaolei/database/COG/COG2024/cog-24.fun2.json"
         swiss_prot                       =  "/nas02/project/zhaolei/database/UniProt/swiss-prot_db/swiss-prot_diamond.dmnd"
         swiss_prot_id_description        =  "/nas02/project/zhaolei/database/UniProt/id_description.json"
         card                             =  "/nas02/project/zhaolei/database/CARD/CARD_diamond/card.dmnd"
         card_aro_json                    =  "/nas02/project/zhaolei/database/CARD/db_raw/ontology_db/aro.json"
         phi                              =  "/nas02/project/zhaolei/database/PHI/phi_diamond/phi.dmnd"
-        phi_base_info                    =  "/nas02/project/zhaolei/database/PHI/phi-base_current.csv"
+        phi_base_info                    =  "/nas02/project/zhaolei/database/PHI/phi_base_processed.json"
         vfdb                             =  "/nas02/project/zhaolei/database/VFDB/vfdb_diamond/vfdb.dmnd"
-        vfdb_setb                        =  "/nas02/project/zhaolei/database/VFDB/setB.json"
+        vfdb_setb                        =  "/nas02/project/zhaolei/database/VFDB/setB2.json"
         vfdb_vfs                         =  "/nas02/project/zhaolei/database/VFDB/VFs.json"
         cazy_dbcan                       =  "/nas02/project/zhaolei/database/CAZy/db3/db/"
         cazy_level1_json                 =  "/nas02/project/zhaolei/database/CAZy/db3/cazy_level1.json"
+        cazy_diamond                     =  "/nas02/project/zhaolei/database/CAZy/db3/db/CAZy.dmnd"
+        kegg2pathway_json                =  "/nas02/project/zhaolei/database/KEGG/kegg_to_pathway.json"
+        full_kegg_pathway_json           =  "/nas02/project/zhaolei/database/KEGG/full_kegg_pathway.json"
 
     }
 }
