--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ params {
   out_dir = "./"
   chunk_size = 1000000
   dep_png_bin_size = 10000
-  anno_analysys = false
+  anno_analysis = false
   manual = false               // 是否手动模式
   csv = null                   // CSV 文件路径（批量模式）
   project_id = null            // 单样本模式下的 project_id
