--- a/config/software.config
+++ b/config/software.config
@@ -34,7 +34,8 @@ params {
         picard           = "/nas02/project/huyifan/software/rnaseq/v1.0/bin/picard"
         diamond          = "/nas02/project/zhaolei/software/conda/conda_env/bininfo/bin/diamond"
         java             = "/nas02/software/jdk-22.0.1/bin/java"
-        ossutil64        = "/usr/bin/ossutil64"
+        ossutil64        = "/data/software/ossutil64"
+        taxonkit         = "/nas02/project/zhaolei/software/taxonKit/taxonkit"
        
     }
 }
