- 修改了bin/ 下脚本在nf中应用的路径， 应该 ${projectDir}，使用绝对路径。 - 删除了bin/ 下软连接过来的路径

--- a/config/software.config
+++ b/config/software.config
@@ -36,6 +36,7 @@ params {
         java             = "/nas02/software/jdk-22.0.1/bin/java"
         ossutil64        = "/data/software/ossutil64"
         taxonkit         = "/nas02/project/zhaolei/software/taxonKit/taxonkit"
+        python           = "/nas02/project/zhaolei/software/conda/conda_env/bininfo/bin/python"
        
     }
 }
