- 完成了基因功能注释结果在报告中的展示； - 更新自动判断样本是否进行基因功能注释分析；不用再外接参数来判断； - 更新了释放数据文件 readme ，添加了基因功能注释的结果； - 其他一些小的数据库或脚本的更新

--- a/config/database.config
+++ b/config/database.config
@@ -36,6 +36,7 @@ params {
         cazy_diamond                     =  "/nas02/project/zhaolei/database/CAZy/db3/db/CAZy.dmnd"
         kegg2pathway_json                =  "/nas02/project/zhaolei/database/KEGG/kegg_to_pathway.json"
         full_kegg_pathway_json           =  "/nas02/project/zhaolei/database/KEGG/full_kegg_pathway.json"
+        taxonomy                         =  "/nas02/project/zhaolei/database/taxonomy/"
 
     }
 }
