--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,6 @@ params {
   out_dir = "./"
   chunk_size = 1000000
   dep_png_bin_size = 10000
-  anno_analysis = false
   manual = false               // 是否手动模式
   csv = null                   // CSV 文件路径（批量模式）
   project_id = null            // 单样本模式下的 project_id
@@ -25,6 +24,7 @@ params {
   genome_size = null           // 单样本模式下的 genome_size
   sample_id = null
   report_path = null
+  batch  = "TEST"
 }
 
 
@@ -74,9 +74,10 @@ plugins {
 
 
 manifest {
+    name = "bacteria_assembly"
     author = 'Lei Zhao'
     description = "bacteria_assembly: ${params.project_id}"
     mainScript = 'main.nf'
     nextflowVersion = '>=24.04.4'
-    version = '1.3'
+    version = '2.0'
 }
